# icedetention

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.ps1
analysis/task1_spikes/: task1_spike_maps_adapted.R
data/: inspect_report.txt
docs/: PANELS.md
ice_pipeline/: __init__.py  aggregate.py  cli.py  config.py  crosswalk.py  encounters.py  extract.py  known_facilities.py  patterns.py  stays.py
references/: ddp_facilities.csv  facilities_need_county.csv  facility_overrides_template.csv  fips_state_county.csv  site_overrides_template.csv  sites_need_county.csv
scripts/: add_territory_fips.py  build_balanced.py  build_combined.py  build_daily_intermittency.py  build_measures.py  build_population.py  categorize_unmapped.py  check_chesapeake.py  check_dates.py  check_overlap.py  compare_ddp_facilities.py  crosscheck_spikes.py  ddp_change_report.py  debug_nm.py  final_unmapped_report.py  final_verify.py  inspect_workbooks.py  make_needs_county.py  make_spike_input.py  master_check.py  profile_stays_parquet.py  rebuild_fips.py  rescue_check.py  strip_comments.py  sync_dropbox.py  thorough_verify.py  verify_coverage.py  verify_email.py  verify_flagging.py  verify_panels.py  verify_stays.py
