[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ice-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "pandas>=2.0",
]

[project.scripts]
ice-pipeline = "ice_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ice_pipeline*"]
